# aws_infra_report

./: Makefile  README.md  pyproject.toml
infra_report/: main.py
infra_report/aws/: ec2.py  ecs.py  elb.py  gateway.py  iam.py  lambda_.py  rds.py  route53.py  s3.py
infra_report/utils/: graph.py  helpers.py  markdown.py
